# Text-To-SQL-App

./: .gitignore  Dockerfile  README.md  docker-compose.yml  init_db.sql  pyproject.toml  requirements.txt
app/: __init__.py  database.py  genai_utils.py  main.py  openai_utils.py
